Removed setup item indicator cut off fix

--- a/client/src/sass/components/_portrait-report.scss
+++ b/client/src/sass/components/_portrait-report.scss
@@ -69,6 +69,7 @@
           display: -webkit-box;
           -webkit-line-clamp: 3; /* number of lines to show */
           -webkit-box-orient: vertical;
+          padding-right: 0.3px;
         }
         &-status {
           bottom: 0;
